@@ -160,24 +160,38 @@ end
 # Calculate the matrix representation of the density operator given a basis
 # Each λ and μ is a BitVector of length 2Nₒ where Nₒ is the number of orbital on each level. Functions basiscombine and basissplit may be useful.
 
-function density_matrix_element!(mat::SparseMatrixCSC{ComplexF64, Int64},  i::Int, j::Int, λ::BitVector,μ::BitVector, single_particle_function::Vector{ComplexF64})
-    Nₒ = length(λ[1]) ÷ 2 # Number of orbitals on each level.
+function bilayer_density_matrix_element!(mat::SparseMatrixCSC{ComplexF64, Int64},  i::Int, j::Int, λ::BitVector,μ::BitVector, single_particle_function::Vector{ComplexF64})
+    Nₒ = length(λ) ÷ 2 # Number of orbitals on each level.
+    #print("$(Nₒ)\t\t")
     # Easiest way is to conver the bilayer basis into a single level (of length 2Nₒ) and use the single-layer code.
     check_difference = λ .⊻ μ
     count_difference = count(check_difference)
+    #display(check_difference)
+    #for thing in check_difference
+    #    print("$(thing*1) ")
+    #end
+    #print(" | ")
+    #println(count_difference)
+
     if count_difference == 2
+        #print("Different indices: ")
         λ_a = bin2dex(check_difference.*λ)[1]
         μ_b  = bin2dex(check_difference.*μ)[1]
         a = count(λ[1:λ_a])
         b = count(μ[1:μ_b])
+        #println("$(λ_a)\t$(μ_b)")
         if abs(λ_a-μ_b)<Nₒ # The two different elements must be in the same layer.    
             term = (-1)^(a+b) * conj.(single_particle_function[λ_a+1]) .* single_particle_function[μ_b+1]
+            #println()
+            # The +1 above is because Julia starts counting from 1. E.g. single_particle_function[1] == ϕ_0
             mat[i,j] += term
             mat[j,i] += conj(term)
         end
     elseif count_difference == 0
         #println(bin2dex(λ))
-        mat[i,j] += sum([abs2.(single_particle_function[m+1]) for m in bin2dex(λ)])
+        term = sum([abs2.(single_particle_function[m+1]) for m in bin2dex(λ)])
+        mat[i,j] += term
+        #println(term)
     end   
 end
 
@@ -208,7 +222,8 @@ function bilayer_density_matrix(basis_list::Vector{BitVector}, single_particle_f
     mat = spzeros(ComplexF64, (dim,dim))
     for i in 1:dim
         for j in i:dim
-            density_matrix_element!(mat, i,j, basis_list[i], basis_list[j], single_particle_function)
+            print("\r$i\t$j\t")
+            bilayer_density_matrix_element!(mat, i,j, basis_list[i], basis_list[j], single_particle_function)
         end
     end
     return mat
