@@ -1,3 +1,5 @@
+=========== 2024-01-10 ==========
+ - Fixed the density calculation in FQH_bilayer.jl
 =========== 2023-12-25 ==========
  - Added in HilbertSpace.jl a function to generate bilayer basis.
 =========== 2023-12-14 ==========
